# lila

./: .gitignore  Cargo.toml  Readme.md  build-stdlib.sh  first.ls  first.qk  install.sh  issues.txt  license_header.txt  test  test-arm64.sh  test-llvm.sh  test-riscv64.sh  test-stdlib.sh  test-x86.sh  test.asm  test.py  test.sh
compiler/aarch64/: Cargo.toml
compiler/example/: Cargo.toml
compiler/llvm/: Cargo.toml
compiler/ltac/: Cargo.toml
compiler/riscv64/: Cargo.toml
compiler/x86/: Cargo.toml
compiler/x86_64/: Cargo.toml  Readme.md
corelib/: corelib.md  io.ls  mem.ida  string.ls  x86_64.ls
docs/: Readme.md  internals.md  invoke-compiler.md  language.md  mac_os.md  modules.md  new-backend.md  rules.md  testing.md  why_rust.md  windows.md
examples/: Readme.md  args.ida  arrays.qk  basic.ls  echo.ls  exponent.ds  hello-world.qk  print_int.ds  println.ls  vm.qk
examples/coreutils/: cat.ida  cat.ls  echo.ida  echo.ls
examples/old/: while-loop.ida
ltac/: Cargo.toml
ltac/src/: lib.rs  ltac.rs  ltac_array.rs  ltac_builder.rs  ltac_expr.rs  ltac_flow.rs  ltac_func.rs  risc.rs  riscv.rs
parser/: Cargo.toml
parser/src/: ast.rs  ast_builder.rs  ast_flow.rs  ast_func.rs  ast_utils.rs  ast_var.rs  lex.rs  lib.rs  llir.rs  llir_builder.rs  llir_func.rs  llir_var.rs  ltac.rs  ltac_array.rs  ltac_builder.rs  ltac_expr.rs  ltac_flow.rs  ltac_for.rs  ltac_func.rs  ltac_utils.rs  ltac_var.rs  module.rs  syntax.rs
share/: dash.lang  ida.lang  ida4.lang  lila.lang  lila4.lang
src/: build.rs  main.rs  test1.rs
stdlib/: Readme.md  file_io.ida  fs.ls  io.ds  io.ls  math.ls  os.ida  os.ls  riscv64.ls  riscv64_start.asm  stdlib.md  string.ds  string.ida  string.ls  text_io.ida  text_io.ls  text_utils.ls  unix.ds  unix.ls  x64_start.asm  x86_64.ds  x86_64.ls
stdlib/old/: fs.ls
stdlib/runtime/: io.ls  string.ls  x86_64.ls
test/array/: array1.qk  array2.qk  array3.qk
test/assign/: add_assign1.ls  add_assign2.ls  array_dec1.ls  dec1.ls  (+10 more)
transform/: Cargo.toml
(+464 files in other folders)
