[package]
name = "lilac"
version = "0.0.2"
authors = ["Patrick Flynn <pflynn4664@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "parser",
    "transform",
    "compiler/x86",
    "compiler/x86_64",
    "compiler/aarch64",
    "compiler/riscv64",
    "compiler/ltac"
]

[dependencies]
parser = { path = "parser" }
transform = { path = "transform" }
example = { path = "compiler/example" }
x86 = { path = "compiler/x86" }
x86_64 = { path = "compiler/x86_64" }
aarch64 = { path = "compiler/aarch64" }
riscv64 = { path = "compiler/riscv64" }
ltac_printer = { path = "compiler/ltac" }

